添加 登录官方岛接口
